--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
     <title>Invitation Page</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script type="text/javascript">
+        let preloadedImages = [];
+        preLoad(['images/banner1.jpg', 'images/banner2.jpg', 'images/banner3.jpg']);
+
+        function preLoad(imageArray) {
+            for (let i = 0; i < imageArray.length; i++) {
+                preloadedImages[i] = new Image();
+                preloadedImages[i].src = imageArray[i];
+            }
+        }
+
+    </script>
 </head>
 
 <body>
@@ -29,14 +41,15 @@
     </header>
     <section id="bannerImages">
 	Banner Images<br/>
-<img src="images/banner1.jpg" alt="Banner"/>
-<img src="images/banner2.jpg" alt="Banner"/>
-<img src="images/banner3.jpg" alt="Banner"/>
+        <img src="images/banner1.jpg" alt="Banner"/>
+        <img src="images/banner2.jpg" alt="Banner"/>
+        <img src="images/banner3.jpg" alt="Banner"/>
     </section>
 
 
     <footer>This events site is for IT3515 tasks.
     </footer>
-</body>
 
+
+</body>
 </html>
