Updated preload.js to effect gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,13 @@
 <head>
     <title>Invitation Page</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script type="text/javascript" src="js/preload.js"></script>
+
+    <script type="text/javascript">
+        window.onload = function () {
+            preloadImages(['images/firefighter.jpg', 'images/work.jpg', 'images/silhouette.jpg', 'images/event.jpg']);
+        }
+    </script>
 </head>
 
 <body>
