--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type="text/javascript">
         window.onload = function () {
-            preloadImages(['images/banner1.jpg', 'images/banner2.jpg', 'images/banner3.jpg'], 'autoImage');
+            cycleImages(['images/banner1.jpg', 'images/banner2.jpg', 'images/banner3.jpg'], 'autoImage');
         }
 
     </script>
