Forgot to update gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -8,11 +8,7 @@
 
     <script type="text/javascript">
         window.onload = function () {
-            preloadImages(
-                ['images/firefighter.jpg', 'images/work.jpg', 'images/silhouette.jpg', 'images/event.jpg'],
-                ['firefighter', 'work', 'sil', 'event'],
-                0
-            );
+            preloadImages(['images/firefighter.jpg', 'images/work.jpg', 'images/silhouette.jpg', 'images/event.jpg']);
         }
     </script>
 </head>
@@ -42,28 +38,28 @@
 
 <div class="gallery">
   <a target="_blank" href="images/firefighter.jpg">
-    <img id="firefighter" alt="firefighter" width="300" height="200">
+    <img src="images/firefighter.jpg" alt="firefighter" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/work.jpg">
-    <img id="work" alt="work" width="300" height="200">
+    <img src="images/work.jpg" alt="work" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/silhouette.jpg">
-    <img id="sil" alt="silhouette" width="300" height="200">
+    <img src="images/silhouette.jpg" alt="silhouette" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/event.jpg">
-    <img id="event" alt="event" width="300" height="200">
+    <img src="images/event.jpg" alt="event" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
