--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript">
         window.onload = function () {
             cycleImages(['images/banner1.jpg', 'images/banner2.jpg', 'images/banner3.jpg'], 'autoImage');
+            preloadImages(['images/firefighter.jpg', 'images/work.jpg', 'images/silhouette.jpg', 'images/event.jpg']);
         }
 
     </script>
